# library_management_system

phase1_sql/: data.sql  queries.sql  schema.sql
phase2_data_ingestion/fetching-data-from-api/: fetching_library_data.py  main.py  pyproject.toml
phase2_data_ingestion/library-management-system/: api_client.py  api_fetcher.py  change_column_name.py  data_processor.py  library_data.json  models.py  pyproject.toml  read_csv_library_data.py  remove_columns_from_csv.py  schemas.py
phase2_data_ingestion/library-management-system/csv_data/: Authors.csv  Book_author.csv  Book_category.csv  Books.csv  BooksOLD.csv  Borrowing.csv  Categories.csv  Libraries.csv  Members.csv  Reviews.csv  convert_to_csv.py
phase3_django_api/: main.py  pyproject.toml
phase3_django_api/library_management_system/: manage.py
phase3_django_api/library_management_system/books/: urls.py  views.py
phase3_django_api/library_management_system/database_connections/: apps.py  clean_code.py  inspectdb_clean.py  models.py
phase3_django_api/library_management_system/libraries_database/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
phase3_django_api/library_management_system/libraries_database/migrations/: 0001_initial.py  0002_alter_library_library_id.py
phase3_django_api/library_management_system/libraries_database/utils/: exception_handler.py
phase3_django_api/library_management_system/library_management_system/: __init__.py  asgi.py  urls.py  wsgi.py
phase3_django_api/library_management_system/library_management_system/settings/: base.py  development.py  production.py
