[project]
name = "library-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "phonenumbers>=9.0.10",
    "pydantic[email]>=2.11.7",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.7",
]
